--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,52 @@
+amqp==2.4.2
+appdirs==1.4.3
 asn1crypto==0.24.0
+Babel==2.6.0
+beautifulsoup4==4.6.3
+billiard==3.6.0.0
+bs4==0.0.1
+celery==4.3.0
 certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
 cryptography==2.3.1
+cssselect==1.0.3
 Django==2.1.1
+django-cors-headers==2.4.0
 django-filter==2.0.0
 django-qiniu-storage==2.3.1
 djangorestframework==3.9.0
 et-xmlfile==1.0.1
+fake-useragent==0.1.11
+flower==0.9.3
 idna==2.7
 jdcal==1.4
+kombu==4.5.0
+lxml==4.2.5
 numpy==1.15.4
 openpyxl==2.5.11
 pandas==0.23.4
+parse==1.9.0
 Pillow==5.3.0
 pycparser==2.18
+pyee==5.0.0
+pymongo==3.7.2
 PyMySQL==0.9.2
 pyOpenSSL==18.0.0
+pyppeteer==0.0.25
+pyquery==1.4.0
 PySocks==1.6.8
 python-dateutil==2.7.5
 pytz==2018.5
 qiniu==7.2.2
+redis==3.2.1
 requests==2.19.1
+requests-html==0.9.0
 six==1.11.0
+tornado==5.1.1
+tqdm==4.28.1
 urllib3==1.23
+vine==1.3.0
+w3lib==1.19.0
+websockets==7.0
 xlrd==1.1.0
